# FiscalAI

./: .gitignore  .gitleaks.toml  .mcp.json  .pre-commit-config.yaml  Auditoria_fiscal.md  CLAUDE.md  README.md  auditoria-ux-frontend-2026.md  hadoff-front-back.md  lighthouserc.json  log_agente.md  remediation-plan.md  validacao-cobertura-mei-simples-2026.md
analista-fiscal-api/: .env.example  .gitignore  DEPLOY.md  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
analista-fiscal-api/.github/workflows/: ci.yml
analista-fiscal-api/alembic/: env.py
analista-fiscal-api/alembic/versions/: 0001_sprint1_fundacao.py  0002_sprint2_ingestao_fiscal.py  0003_sprint4_rag_agenda_multa.py  0004_sprint5_notas_whatsapp.py  0005_sprint5_audit_rps_sequencial.py  0006_sprint6_serpro_certidoes.py  0007_sprint6_pgdas_ecac.py  0008_sprint6_declaracao_anual.py  0009_sprint7_open_finance.py  0010_sprint7_transacoes_webhook.py  0011_sprint7_conciliacao.py  0012_sprint8_imobilizado.py  0013_sprint8_provisoes_trabalhistas.py  0014_sprint9_plano_contas_lancamentos.py  0015_sprint9_saldos_encerramento.py  0016_sprint10_pessoal_tabelas.py  0017_sprint10_eventos_folha.py  0018_sprint10_socio_prolabore_distribuicao_esocial.py  0019_sprint11_presuncao_lp.py  0020_sprint11_icms_efd_reinf.py  0021_sprint11_det_monitor_parcelamento.py  0022_sprint12_relatorios.py  0024_fase2_documento_fiscal_hardening.py  0025_fase2_tabelas_scd_hardening.py  0026_fase2_rbt12_materializada.py  0027_fase2_empresa_municipio_ibge.py  0028_fase2_whatsapp_dedup.py  0029_fase2_aliquota_iss_validada.py  0030_fase2_provisao_aliquota_precisao.py  0031_fix_algoritmo_versao_size.py  0032_sprint13_marketplace.py  0033_sprint13_pr3_pagamento_marketplace.py  0034_sprint14_reforma_aliquotas.py  0035_sprint14_doc_fiscal_cclasstrib.py  0036_sprint15_advisor_anomalias.py  0037_sprint15_advisor_digest.py  0038_sprint155_digest_envio_whatsapp.py  0039_sprint16_arquivo_sped.py  0040_sprint18_pr1_fundacao_importacao.py  0041_sprint19_pr1_indices_performance.py  (+28 more)
analista-fiscal-api/app/: config.py  main.py
analista-fiscal-api/app/modules/advisor/: __init__.py  calcula_anomalias.py  gera_digest_semanal.py  redigir_texto.py  regras_lp.py  repo.py  router.py  schemas.py  service.py  simula_fator_r.py  sugestoes_otimizacao.py
analista-fiscal-api/app/modules/agenda/: gerar_calendario.py  repo.py  router.py  schemas.py  service.py
analista-fiscal-api/app/modules/assistente/: router.py  schemas.py  service.py
analista-fiscal-api/app/modules/auth/: repo.py  router.py  schemas.py  service.py
analista-fiscal-api/app/modules/billing/: __init__.py  planos.py  provider.py  repo.py  router.py  schemas.py  service.py
analista-fiscal-api/app/modules/certidoes/: __init__.py  repo.py  router.py  schemas.py  scrapers.py  service.py
analista-fiscal-api/app/modules/certificado/: __init__.py  inspeciona_p12.py  repo.py  router.py  schemas.py  service.py
analista-fiscal-api/app/modules/conciliacao/: __init__.py  algoritmo.py  repo.py  router.py  schemas.py  service.py
analista-fiscal-api/app/modules/contabil/: __init__.py  classificacao_ncm.py  classificador_cfop.py  encerramento_service.py  lancador_auto.py  lancador_service.py  partidas.py  plano_referencial.py  relatorios.py  relatorios_service.py  repo.py  router.py  schemas.py  service.py
analista-fiscal-api/app/modules/declaracao_anual/: __init__.py  gerar_dasn_simei.py  gerar_defis.py  repo.py  router.py  schemas.py  service.py
analista-fiscal-api/app/modules/det/: __init__.py  repo.py  router.py  schemas.py  service.py
analista-fiscal-api/app/modules/e_cac/: __init__.py  classificador.py  repo.py  router.py  schemas.py  service.py
analista-fiscal-api/app/modules/empresa/: cnpj.py  ibge.py  onboarding.py  onboarding_bundle.py  repo.py  router.py  schemas.py  service.py
analista-fiscal-api/app/modules/fiscal/: calcula_das.py  repo.py  router.py  schemas.py  service.py  snapshots.py
analista-fiscal-api/app/modules/icms/: __init__.py  calcula_icms.py  repo.py  router.py  schemas.py  service.py
analista-fiscal-api/app/modules/imobilizado/: __init__.py  calcula_depreciacao.py  repo.py  router.py  schemas.py  service.py
analista-fiscal-api/app/modules/ingestao/: parser.py  repo.py  router.py  schemas.py  service.py
analista-fiscal-api/app/shared/: competencia.py  exceptions.py  idempotency.py  logging.py  types.py
analista-fiscal-api/app/workers/: celery_app.py
analista-fiscal-api/docs/adr/: 0001-fastapi-vs-litestar.md  0002-pgvector-vs-qdrant.md  0003-llm-3-camadas.md  0004-multi-tenancy-rls.md  0005-fatos-imutaveis.md  0006-focus-nfe-vs-plugnotas.md  0007-pluggy-vs-belvo.md  0008-citacao-obrigatoria.md  0009-serpro-integra-contador.md  0010-meta-whatsapp-direto.md  0011-parser-xml-defusedxml-vs-nfelib.md  0012-prompts-llm-versionados.md  0013-celery-instalacao-opt-in.md  0014-transmissao-spedes-modelo.md
analista-fiscal-api/docs/sprints/: sprint-00.md  sprint-01.md  sprint-02.md
analista-fiscal-api/infra/docker/: Dockerfile.api  Dockerfile.beat  Dockerfile.worker
analista-fiscal-api/infra/postgres/: init.sql
analista-fiscal-api/scripts/: __init__.py
analista-fiscal-api/scripts/seed/: __init__.py  cardinality.py  seed_1k_tenants.py  seed_dev.py  seed_helpers.py
analista-fiscal-api/tests/: conftest.py  test_smoke.py
analista-fiscal-api/tests/eval/: alucinacao_valor.jsonl  citacao_obrigatoria.jsonl  conftest.py  encaminhamento_marketplace.jsonl  extracao_estruturada.jsonl  intent_classification.jsonl  test_alucinacao.py  test_citacao.py  test_extracao.py  test_intent.py  test_marketplace.py
analista-fiscal-api/tests/integration/: test_auth.py  test_billing.py  test_empresa_create.py  test_empresa_update.py  test_lgpd.py  test_pii_crypto.py  test_pipeline_sprint10_a_12.py  test_refresh.py  test_rls_isolation.py  test_sped_storage.py
analista-fiscal-api/tests/load/: .gitignore  README.md  docker-compose.load.yml  run.ps1
analista-fiscal-api/tests/perf/: __init__.py  test_perf_engine.py  test_seed_helpers.py
(+896 files in other folders)
