[tool.poetry]
name = "analista-fiscal-api"
version = "0.1.0"
description = "Backend do Analista Fiscal — sistema fiscal-contábil multi-tenant para PMEs brasileiras."
authors = ["FiscalAI Team"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115"
uvicorn = { extras = ["standard"], version = "^0.32" }
pydantic = { extras = ["email"], version = "^2.9" }
pydantic-settings = "^2.5"
sqlalchemy = { extras = ["asyncio"], version = "^2.0" }
asyncpg = "^0.30"
alembic = "^1.13"
httpx = "^0.27"
redis = "^5.1"
structlog = "^24.4"
pyjwt = { extras = ["crypto"], version = "^2.9" }
bcrypt = "^4.2"
tzdata = ">=2022.1"
defusedxml = ">=0.7"
python-multipart = ">=0.0.9"
google-genai = ">=1.0"
langfuse = ">=2.0"
pgvector = ">=0.3"
tenacity = ">=8.2"
sentry-sdk = {version = "^2.20", extras = ["fastapi"]}
prometheus-fastapi-instrumentator = "^7.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
pytest-asyncio = "^0.24"
pytest-cov = "^5.0"
ruff = "^0.7"
mypy = "^1.13"
types-redis = "^4.6"
asgi-lifespan = "^2.1"
bandit = { extras = ["toml"], version = "^1.8" }
# Driver sync de migrations (Alembic). psycopg v3 binário embute libpq e honra
# o autocommit_block() — necessário p/ CREATE INDEX CONCURRENTLY (migration 0041).
psycopg = { extras = ["binary"], version = "^3.2" }

# Sprint 19.6 PR3 (#1, #41, #2) — grupos opcionais para deploy:
#
#   workers   — Celery real (broker Redis) + tasks reais.
#               Ativar: poetry install --with workers
#               Comandos: celery -A app.workers.celery_app worker/beat
#
#   dou-llm   — pdfplumber para extrair PDFs do DOU (Sprint 19.5 PR3).
#               Ativar: poetry install --with dou-llm
#
#   storage   — boto3 para S3Storage (Sprint 19.6 PR3 #2).
#               Ativar: poetry install --with storage
#
# Em dev local, defaults funcionam sem nenhum grupo (Celery stub
# dual-mode, LocalDiskStorage, DOU worker stub).
[tool.poetry.group.workers]
optional = true

[tool.poetry.group.workers.dependencies]
celery = { extras = ["redis"], version = "^5.4" }

[tool.poetry.group.dou-llm]
optional = true

[tool.poetry.group.dou-llm.dependencies]
pdfplumber = "^0.11"

[tool.poetry.group.storage]
optional = true

[tool.poetry.group.storage.dependencies]
boto3 = "^1.35"

# Sprint 19.7 PR2 (#13) — eSocial transmissão real:
#   esocial — XMLDSig (lxml para C14N + cryptography para RSA+pkcs12) +
#             signxml (orquestra ds:Signature padrão XMLDSig W3C).
#             Ativar: poetry install --with esocial
#             Defaults sem o grupo: assinador é NotImplementedXmldsig
#             (gera evento status='preparado', sem assinar). Cliente
#             eSocial fail-fast se ESOCIAL_TRANSMISSAO_ATIVA=true sem o
#             grupo instalado.
[tool.poetry.group.esocial]
optional = true

[tool.poetry.group.esocial.dependencies]
lxml = "^5.3"
signxml = "^4.0"
cryptography = "^43.0"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["alembic/versions"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.lint]
select = [
    "E", "F", "W",   # pycodestyle / pyflakes
    "I",             # isort
    "UP",            # pyupgrade
    "B",             # flake8-bugbear
    "SIM",           # flake8-simplify
    "C4",            # flake8-comprehensions
    "RUF",           # ruff-specific
]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011"]

[tool.mypy]
python_version = "3.12"
strict = true
disallow_any_generics = true
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_reexport = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = ["defusedxml.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["google.*", "langfuse.*", "pgvector.*"]
ignore_missing_imports = true

# Grupos opt-in da Sprint 19.6 PR3 (#1, #41, #2). Quando não instalados,
# imports lazy nos módulos correspondentes ainda passam mypy.
[[tool.mypy.overrides]]
module = ["celery.*", "pdfplumber.*", "boto3.*", "botocore.*"]
ignore_missing_imports = true

# Sprint 19.7 PR2 (#13) — grupo opt-in esocial.
[[tool.mypy.overrides]]
module = ["lxml.*", "signxml.*", "cryptography.*"]
ignore_missing_imports = true

[tool.bandit]
exclude_dirs = ["tests", "alembic"]
skips = ["B101"]  # assert usage legítimo em guards de invariantes

[tool.bandit.assert_used]
skips = ["tests/*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q --strict-markers"
filterwarnings = ["error"]
markers = [
    "eval_live: testes de eval que requerem LLM real (Ollama ou Gemini)",
]
